# Legal-red-Line

./: Dockerfile  README.md  generate_tasks.py  inference.py  legal_env.py  mock_inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup_project.py  tasks.py  test_negative.py
server/: app.py
