[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legal_red_line"
version = "1.0.0"
description = "AI Legal Assistant OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "python-dotenv"
]

[project.scripts]
server = "server.app:main"
